# testy

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.c  example_test.c  test.h  test_main.c
.github/: copilot-instructions.md
